apps/70-tools/it-tools/overlays/prod/priority-class-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
spec:
  template:
    spec:
      priorityClassName: vixens-low
