apps/70-tools/it-tools/overlays/prod/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools-ingress
spec:
  template:
    spec:
      containers:
      - name: it-tools-ingress
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 20m
            memory: 128Mi
