apps/70-tools/it-tools/overlays/prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools-ingress
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: IT Tools
    gethomepage.dev/icon: it-tools.png
    gethomepage.dev/group: Tools
spec:
  ingressClassName: traefik
  rules:
    - host: it-tools.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keda-interceptor-proxy
                port:
                  number: 8080
  tls:
    - hosts:
        - it-tools.truxonline.com
      secretName: it-tools-tls-prod
